--- a/styles/pages/login.css
+++ b/styles/pages/login.css
@@ -19,8 +19,8 @@ body {
 .container h2 {
     text-align: center;
     margin-bottom: 20px;
+    font-size: 24px;
 }
-login-form 
 .container label {
     margin-top: 10px;
     display: block;
