--- a/styles/pages/orders.css
+++ b/styles/pages/orders.css
@@ -116,20 +116,20 @@ main {
     /* Убираем обводку при фокусе */
 }
 
-.products {
+.orders {
     margin-top: 60px;
     /* Отступ сверху для секции клиентов */
 }
 
-.products table {
+.orders table {
     width: 100%;
     /* Ширина таблицы 100% */
     border-collapse: collapse;
     /* Убираем двойные границы между ячейками */
 }
 
-.products th,
-.products td {
+.orders th,
+.orders td {
     padding: 12px;
     /* Отступы внутри ячеек */
     text-align: left;
@@ -138,42 +138,42 @@ main {
     /* Нижняя граница ячеек */
 }
 
-.products th {
+.orders th {
     background-color: #b3aeae;
     /* Цвет фона заголовков */
     font-weight: bold;
     /* Жирный шрифт для заголовков */
 }
 
-.products tr:hover {
+.orders tr:hover {
     background-color: #f1f1f1;
     /* Цвет фона строки при наведении */
 }
 
-.products i {
+.orders i {
     cursor: pointer;
     /* Курсор в виде указателя на иконках */
 }
 
-.products td i:hover {
+.orders td i:hover {
     color: #4CAF50;
     /* Цвет иконок при наведении */
 }
 
-.products_title {
+.orders_title {
     font-size: 24px;
     text-align: center;
     margin-bottom: 20px;
 
 }
 
-.products_add {
+.orders_add {
     position: sticky;
     top: 16px;
     margin-left: 7%;
 }
 
-.products_add:hover {
+.orders_add:hover {
     color: #4CAF50;
 }
 
@@ -217,4 +217,33 @@ main {
 
 .cancel {
     background-color: #e9300f;
+}
+.order .order_number{
+    color: black; 
+    font-weight: 900;
+}
+.order .order_total{
+    color: orange; 
+    font-weight: 800;
+}
+.order_items {
+    width: 100%; /* Ширина таблицы 100% */
+    margin-top: 15px;
+    border-collapse: collapse; /* Убираем двойные границы между ячейками */
+}
+
+.order_items th,
+.order_items td {
+    padding: 12px; /* Отступы внутри ячеек */
+    text-align: left; /* Выравнивание текста по левому краю */
+    border: 1px solid black; /* Нижняя граница ячеек */
+}
+
+.order_items th {
+    background-color: #b3aeae; /* Цвет фона заголовков */
+    font-weight: bold; /* Жирный шрифт для заголовков */
+}
+
+.order_items tr:hover {
+    background-color: #f1f1f1; /* Цвет фона строки при наведении */
 }
