--- a/styles/pages/orders.css
+++ b/styles/pages/orders.css
@@ -115,6 +115,20 @@ main {
     outline: none;
     /* Убираем обводку при фокусе */
 }
+.filters button{
+    width: calc(100% - 22px);
+    background-color: #4CAF50;
+    padding: 10px;
+    color: white;
+    border: 1px solid black;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 15px;
+}
+
+.filters button:hover{
+    background-color: #318534;
+}
 
 .orders {
     margin-top: 60px;
