--- a/styles/pages/orders.css
+++ b/styles/pages/orders.css
@@ -261,3 +261,19 @@ main {
 .order_items tr:hover {
     background-color: #f1f1f1; /* Цвет фона строки при наведении */
 }
+.main-select {
+    width: 100% ;
+    /* Учитываем отступы */
+    padding: 2px;
+    margin-top: 2px;
+    /* Отступ сверху поля ввода/выбора */
+    border-radius: 4px;
+    border: 1px solid #828282;
+}
+
+.main-select:focus {
+    border-color: #4CAF50;
+}
+.modal__container{
+    width: 17% ;
+}
