--- a/styles/pages/orders.css
+++ b/styles/pages/orders.css
@@ -130,6 +130,40 @@ main {
     background-color: #318534;
 }
 
+.search {
+    display: block;
+    width: calc(100% - 22px);
+    padding: 10px;
+    background-color: #828282;
+    border: 1px solid black;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    border-radius: 4px;
+    margin-top: 15px;
+}
+
+.search:hover {
+    background-color: #666666;
+}
+
+.checkbox-wrapper {
+    margin-top: 15px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+.checkbox-wrapper input[type="checkbox"] {
+    width: auto;
+    margin: 0;
+
+}
+.checkbox-wrapper label {
+    margin: 0;
+    font-weight: 200;
+    display: inline;
+}
+
 .orders {
     margin-top: 60px;
     /* Отступ сверху для секции клиентов */
