--- a/styles/pages/clients.css
+++ b/styles/pages/clients.css
@@ -99,6 +99,22 @@ main {
 .filters button:hover{
     background-color: #318534;
 }
+.search {
+    display: block;
+    width: calc(100% - 22px);
+    padding: 10px;
+    background-color: #828282;
+    border: 1px solid black;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    border-radius: 4px;
+    margin-top: 15px;
+}
+
+.search:hover {
+    background-color: #666666;
+}
 
 /* Стили для таблицы */
 .clients {
