--- a/styles/pages/products.css
+++ b/styles/pages/products.css
@@ -129,7 +129,22 @@ main {
 .filters button:hover{
     background-color: #318534;
 }
+.search {
+    display: block;
+    width: calc(100% - 22px);
+    padding: 10px;
+    background-color: #828282;
+    border: 1px solid black;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    border-radius: 4px;
+    margin-top: 15px;
+}
 
+.search:hover {
+    background-color: #666666;
+}
 .products {
     margin-top: 60px;
     /* Отступ сверху для секции клиентов */
